-fix Horisontal overflow in mobile

--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,7 @@ button:focus-visible {
   /* max-width: 1280px; */
   margin: 0 auto;
   width: 100%;
+  overflow-x: hidden;
   /* padding: 2rem; */
   /* text-align: center; */
 }
